@@ -6,8 +6,9 @@ Makefile.in
 Makefile.in.in
 POTFILES
 cat-id-tbl.c
-stamp-cat-id
-po2tbl.sed
-po2tbl.sed.in
 messages
 missing
+notexist
+po2tbl.sed
+po2tbl.sed.in
+stamp-cat-id
