@@ -2,7 +2,6 @@
 # Please keep this file sorted alphabetically.
 [type: gettext/ini] 48x48/emblems/emblem-OK.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-art.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-bin.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-camera.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-certified.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-cool.icon.in
@@ -18,9 +17,7 @@
 [type: gettext/ini] 48x48/emblems/emblem-distinguished.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-documents.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-draft.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-generic.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-handshake.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-important.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-marketing.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-money.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-multimedia.icon.in
@@ -39,10 +36,13 @@
 [type: gettext/ini] 48x48/emblems/emblem-shared.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-sound.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-symbolic-link.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-special.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-trash.icon.in
 [type: gettext/ini] 48x48/emblems/emblem-web.icon.in
-[type: gettext/ini] scalable/emblems/emblem-favorite.icon.in
-[type: gettext/ini] scalable/emblems/emblem-mail.icon.in
-[type: gettext/ini] scalable/emblems/emblem-urgent.icon.in
 [type: gettext/ini] index.theme.in
+[type: gettext/ini] scalable/emblems/emblem-bin.icon.in
+[type: gettext/ini] scalable/emblems/emblem-favorite.icon.in
+[type: gettext/ini] scalable/emblems/emblem-generic.icon.in
+[type: gettext/ini] scalable/emblems/emblem-important.icon.in
+[type: gettext/ini] scalable/emblems/emblem-mail.icon.in
+[type: gettext/ini] scalable/emblems/emblem-special.icon.in
+[type: gettext/ini] scalable/emblems/emblem-urgent.icon.in
