@@ -1,3 +1,9 @@
+2005-04-06  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Removed non-existing file entries and added
+	missing ones.
+	* .cvsignore: Added one entry and sorted this file.
+
 2005-04-01  Adi Attar  <aattar@cvs.gnome.org>
 
 	* xh.po: Added Xhosa translation.
